  - Title::userCan
  - WebRequest::getLimitOffset
  - All methods of the old SpecialPageFactory; the entire class was removed
* Multiple methods previously had optional User parameters, with fallbacks
  to the $wgUser global variable. Not passing a User to those methods was
  previously hard deprecated, and support for now passing a User has now
  been removed:
   - FileDeleteForm::__construct
   - LogPage::addEntry (also accepts user id instead)
   - Title::getNotificationTimestamp (though the entire method is deprecated)
* The global function `wfWaitForSlaves`, deprecated in 1.27 and hard-deprecated
  in 1.35, has been removed. Use LBFactory::waitForReplication() instead.
* The global variable $wgMemc, deprecated since 1.35, has been removed.
  Usage should generally be migrated to WANObjectCache, or if you really need
  the internal object, use ObjectCache::getLocalClusterInstance instead.
* CategoryFinder, which was deprecated in 1.31 and hard-deprecated in 1.35,
  has been removed.
* Sanitizer::escapeId(), deprecated in 1.30, has been removed.
* Parser::setFunctionTagHook(), deprecated in 1.35, has been removed.
* The ParserBeforeTidy hook, deprecated in 1.35, has been removed.
* All methods of MWTidy except for MW::tidy() have been removed.  These
  were either @internal or deprecated in 1.35.
* The support for IE8 has been dropped.
* Less mixin `.background-image-svg-quick()` from mediawiki.mixins.less,
  deprecated since 1.35, has been removed.
* The ResourceLoader module `mediawiki.legacy.oldshared` and its file
  'oldshared.css', deprecated since 1.35 has been removed (T248357).
* The LinkBegin and LinkEnd hooks, deprecated in 1.28, have been removed. You
  can instead use the HtmlPageLinkRendererBegin and HtmlPageLinkRendererEnd
  hooks, respectively.
* Skin::getDynamicStylesheetQuery(), deprecated in 1.32, has been removed. You
  should use action=raw&ctype=text/css directly.
* Skin::makeI18nUrl(), deprecated in 1.35, has been removed.