@@ -107,6 +107,7 @@ because of Phabricator reports.
   previously hard deprecated, and support for now passing a User has now
   been removed:
    - FileDeleteForm::__construct
+   - LocalFileDeleteBatch::__construct
    - LogPage::addEntry (also accepts user id instead)
    - Title::getNotificationTimestamp (though the entire method is deprecated)
 * The global function `wfWaitForSlaves`, deprecated in 1.27 and hard-deprecated
